fix: popup box height  and form style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="./img/service.png" alt="service" class="service-btn-image">
     </a> -->
     <img src="./img/main-header.png" alt="main-header" class="main-header">
-    <p class="main-paragraph">尊敬的贵宾，感谢您一直以来对24棋牌的信任和支持，<br>为提供给您更优质的服务质量，<br>我司真诚希望能听取您宝贵的意见和建议！</p>
+    <img src="./img/paragraph.png" class="main-paragraph">
 
     <img src="./img/appreciate.png" alt="" class="appreciate">
 
@@ -33,8 +33,8 @@
         <textarea id="opinion" placeholder="请填写您遇到的具体问题，或者对游戏的建议" class="input-field opinion-input-field"></textarea>
         <p class="hint"><img src="./img/attention.png" class="attention"> 反馈意见不可为空</p>
       </div>
-      <div class="">
-        <p class="input-label">截图让我们更清楚了解您的问题*</p>
+      <div class="uplaod-screenshot-box">
+        <p class="input-label screenshot-box-label">截图让我们更清楚了解您的问题</p>
         <div class="screenshot-box">
           <div class="screenshot">
             <label for="screenshot1">
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div>
-        <label class="input-label">验证码*</label><br>
+        <label class="input-label">验证码*</label>
         <div>
           <input type="text" class="input-field code-input-field">
           <span class="code">7426</span>
